<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescricaoFragment"
    android:layout_marginBottom="@dimen/bottom_nav_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/main_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="0dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitStart"
                android:src="@drawable/main_pic" />

            <ImageView
                android:id="@+id/cut"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/triangle_bottom_left" />

        </RelativeLayout>

        <TextView
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/nome"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:textColor="@color/colorDarkModeAccents_green"
            android:textAllCaps="true"
            android:textSize="@dimen/text_accent_size"/>
        <TextView
            android:id="@+id/birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorDarkModeAccents_light_orange"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao1"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorDarkModeText"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao2"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorDarkModeText"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/desc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao3"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorDarkModeText"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/assinatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/assinatura"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</ScrollView>